<RelativeLayout
    android:id="@+id/logout_form"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <!-- Login progress -->

    <LinearLayout
        android:id="@+id/login_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:id="@+id/login_status_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/login_progress_signing_in"
            android:textAppearance="?android:attr/textAppearanceMedium"/>
    </LinearLayout>


    <RelativeLayout
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:visibility="gone">

        <ImageView
            android:id="@+id/idp_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="15dp"
            android:src="@drawable/bolzano_header"/>

        <TextView
            android:id="@+id/auto_login_failed_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/idp_iv"
            android:layout_centerHorizontal="true"
            android:fontFamily="sans-serif-light"
            android:gravity="center_horizontal"
            android:paddingBottom="15dp"
            android:text="@string/login_failed_title"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <TextView
            android:id="@+id/auto_login_failed_reason"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/auto_login_failed_title"
            android:layout_centerHorizontal="true"
            android:fontFamily="sans-serif-light"
            android:paddingTop="5dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="italic"/>


        <Button
            android:id="@+id/try_again_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/bordered_button"
            android:layout_below="@+id/auto_login_failed_reason"
            android:fontFamily="sans-serif-light"
            android:text="@string/login_try_again"
            android:textSize="16sp"/>

        <Button
            android:id="@+id/logout_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/bordered_button"
            android:fontFamily="sans-serif-light"
            android:text="@string/logout_logout"
            android:textSize="16sp"/>
    </RelativeLayout>

</RelativeLayout>
