<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Login progress -->

    <LinearLayout
        android:id="@+id/login_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:visibility="gone">

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:id="@+id/login_status_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/login_progress_signing_in"
            android:textAppearance="?android:attr/textAppearanceMedium"/>
    </LinearLayout>

    <!-- Login form -->

    <ScrollView

        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <ImageView
                android:id="@+id/region_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:src="@drawable/lombardia_header"/>

            <TextView
                android:id="@+id/email_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/region_image"
                android:fontFamily="sans-serif"
                android:paddingBottom="2dp"
                android:text="@string/login_login"
                android:textSize="12sp"/>

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/email_tv"
                android:layout_marginBottom="10dp"
                android:background="@drawable/bordered_button"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:paddingBottom="3dp"
                android:paddingLeft="4dp"
                android:paddingTop="3dp"
                android:singleLine="true"/>

            <TextView
                android:id="@+id/password_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/email"
                android:fontFamily="sans-serif"
                android:paddingBottom="2dp"
                android:text="@string/login_password"
                android:textSize="12sp"/>

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/password_tv"
                android:layout_marginBottom="25dp"
                android:background="@drawable/bordered_button"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/login_password"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingBottom="3dp"
                android:paddingLeft="4dp"
                android:paddingTop="3dp"
                android:singleLine="true"/>


            <LinearLayout
                android:id="@+id/button_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/password"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/login_cancel"
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight=".5"
                    android:background="@drawable/bordered_button"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/login_cancel"
                    android:textSize="15sp"/>

                <Button
                    android:id="@+id/login_confirm"
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight=".5"
                    android:background="@drawable/bordered_button"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/login_login"
                    android:textSize="15sp"/>
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>

